--- a/index.html
+++ b/index.html
@@ -4,194 +4,160 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FirstClub — MiniApp</title>
-
   <style>
-    :root{
-      --bg: #0a0d12;
-      --bg-2:#0e1117;
-      --card:#111722;
-      --card-2:#0f1520;
-      --stroke: rgba(255,255,255,.06);
-      --stroke-2: rgba(100,160,255,.25);
-      --blue:#3b82f6;
-      --blue-2:#1d4ed8;
-      --text:#e6edf3;
-      --muted:#98a2b3;
-      --glow: 0 0 0 1px var(--stroke), 0 8px 30px rgba(0,0,0,.6);
-      --radius:18px;
-    }
+:root{
+  --bg:#0a0d12;
+  --bg-2:#0e1117;
+  --panel:#0d1117;
+  --card:#111722;
+  --card-2:#0f1520;
+  --stroke: rgba(255,255,255,.06);
+  --stroke-2: rgba(100,160,255,.25);
+  --blue:#3b82f6;
+  --blue-2:#1d4ed8;
+  --text:#e6edf3;
+  --muted:#98a2b3;
+  --radius:18px;
+  --radius-sm:12px;
+  --shadow: 0 0 0 1px var(--stroke), 0 8px 30px rgba(0,0,0,.6);
+}
+html[data-theme="light"]{
+  --bg:#f4f7fb;
+  --bg-2:#eef2f7;
+  --panel:#ffffff;
+  --card:#ffffff;
+  --card-2:#f6f8fb;
+  --stroke: rgba(10,20,40,.08);
+  --stroke-2: rgba(59,130,246,.35);
+  --blue:#2563eb;
+  --blue-2:#1d4ed8;
+  --text:#0b1220;
+  --muted:#52607a;
+  --shadow: 0 0 0 1px var(--stroke), 0 10px 26px rgba(10,20,40,.08);
+}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  color:var(--text);
+  background:
+    radial-gradient(1000px 600px at 10% -10%, rgba(59,130,246,.28), transparent 60%),
+    radial-gradient(800px 500px at 110% 0%, rgba(29,78,216,.22), transparent 55%),
+    linear-gradient(180deg, var(--bg-2) 0%, var(--bg) 100%);
+  min-height:100vh;
+  display:flex;
+  align-items:flex-start;
+  justify-content:center;
+  padding:16px;
+}
+.app{
+  width:min(1100px,100%);
+  background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0));
+  border:1px solid var(--stroke);
+  border-radius:20px;
+  box-shadow: var(--shadow);
+  padding:14px;
+}
+header{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:10px 12px 14px;
+  gap:10px;
+}
+.title{display:flex;flex-direction:column;gap:2px;}
+.title h1{
+  margin:0;font-size:20px;font-weight:800;letter-spacing:.2px;
+  color: var(--text);
+  text-shadow:0 0 18px rgba(59,130,246,.25);
+}
+.title span{font-size:12px;color:var(--muted);}
+.back{
+  display:inline-flex;align-items:center;gap:8px;
+  padding:8px 12px;border-radius:10px;
+  background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
+  border:1px solid var(--stroke);
+  color:var(--text);text-decoration:none;font-weight:700;font-size:14px;
+  cursor:pointer;transition:.15s ease;
+}
+.back:hover{border-color:var(--stroke-2);transform:translateY(-1px);}
+.grid{
+  display:grid;
+  grid-template-columns: 1.15fr .85fr;
+  gap:12px;padding:0 4px 8px;
+}
+.col{display:grid;grid-template-columns:1fr;gap:12px;}
+a.card-btn,button.card-btn{
+  position:relative;display:block;text-align:left;
+  background:
+    radial-gradient(600px 220px at 10% -30%, rgba(59,130,246,.16), transparent 60%),
+    linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
+  border:1px solid var(--stroke);
+  border-radius:var(--radius);
+  padding:16px;min-height:96px;
+  cursor:pointer;transition:.18s ease;
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
+  overflow:hidden;color:inherit;text-decoration:none;
+}
+.card-btn:hover{
+  transform: translateY(-1px);
+  border-color: var(--stroke-2);
+  box-shadow: 0 0 0 1px rgba(59,130,246,.25), 0 12px 30px rgba(8,12,18,.55);
+}
+.card-btn.active{
+  border-color: rgba(59,130,246,.55);
+  box-shadow: 0 0 0 1px rgba(59,130,246,.45), 0 0 40px rgba(59,130,246,.18) inset;
+}
+.card-row{display:flex;gap:12px;align-items:flex-start;}
+.icon{
+  width:40px;height:40px;display:grid;place-items:center;
+  background: rgba(59,130,246,.10);
+  border:1px solid rgba(59,130,246,.25);
+  border-radius:12px;font-size:20px;flex:0 0 auto;
+  box-shadow: inset 0 0 20px rgba(59,130,246,.15);
+}
+.card-text h3{margin:0 0 4px;font-size:16px;font-weight:800;}
+.card-text p{margin:0;font-size:12.5px;color:var(--muted);}
 
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(1200px 700px at 10% -10%, rgba(29,78,216,.35), transparent 60%),
-        radial-gradient(900px 600px at 110% 0%, rgba(59,130,246,.25), transparent 55%),
-        linear-gradient(180deg, #06080b 0%, #0a0d12 100%);
-      min-height:100vh;
-      display:flex;
-      align-items:flex-start;
-      justify-content:center;
-      padding:16px;
-    }
+.section{
+  background: linear-gradient(180deg, var(--panel) 0%, color-mix(in oklab, var(--panel) 92%, transparent) 100%);
+  border:1px solid var(--stroke);
+  border-radius:16px;
+  padding:14px;
+  box-shadow: var(--shadow);
+}
+.section h2{margin:0 0 10px;font-size:18px;}
+.subgrid{
+  display:grid;grid-template-columns:repeat(2,1fr);gap:10px;
+}
+.tile{
+  background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
+  border:1px solid var(--stroke);
+  border-radius:14px;padding:12px;min-height:70px;
+}
+.tile h4{margin:0 0 4px;font-size:14.5px;}
+.tile p{margin:0;font-size:12px;color:var(--muted);line-height:1.4;}
 
-    .app{
-      width:min(1100px, 100%);
-      background: linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,0));
-      border:1px solid var(--stroke);
-      border-radius:20px;
-      box-shadow: var(--glow);
-      padding:14px;
-    }
+.footer{
+  padding:10px 12px 6px;text-align:center;font-size:11px;color:var(--muted);
+  border-top:1px dashed var(--stroke);margin-top:8px;line-height:1.6;
+}
 
-    header{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:10px 12px 14px 12px;
-    }
+.toast{
+  position:fixed;left:50%;bottom:18px;transform:translateX(-50%) translateY(20px);
+  background: rgba(11,16,24,.95);
+  border:1px solid var(--stroke-2);
+  color:var(--text);padding:10px 14px;border-radius:12px;font-size:13px;
+  opacity:0;transition:.2s ease;box-shadow: var(--shadow);z-index:9999;pointer-events:none;white-space:nowrap;
+}
+.toast.show{opacity:1;transform:translateX(-50%) translateY(0);}
 
-    .title{
-      display:flex; flex-direction:column; gap:2px;
-    }
-    .title h1{
-      margin:0;
-      font-size:20px;
-      font-weight:800;
-      letter-spacing:.2px;
-      color:#cfe3ff;
-      text-shadow:0 0 18px rgba(59,130,246,.35);
-    }
-    .title span{
-      font-size:12px;
-      color:var(--muted);
-    }
-
-    .grid{
-      display:grid;
-      grid-template-columns: 1.15fr .85fr;
-      gap:12px;
-      padding:0 4px 8px 4px;
-    }
-
-    .col{
-      display:grid;
-      grid-template-columns: 1fr;
-      gap:12px;
-    }
-
-    .card-btn{
-      position:relative;
-      background:
-        radial-gradient(600px 220px at 10% -30%, rgba(59,130,246,.18), transparent 60%),
-        linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
-      border:1px solid var(--stroke);
-      border-radius: var(--radius);
-      padding:16px 16px;
-      min-height:96px;
-      cursor:pointer;
-      transition: .18s ease;
-      box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
-      overflow:hidden;
-    }
-
-    .card-btn:hover{
-      transform: translateY(-1px);
-      border-color: var(--stroke-2);
-      box-shadow:
-        0 0 0 1px rgba(59,130,246,.25),
-        0 12px 30px rgba(8,12,18,.9);
-    }
-
-    .card-btn.active{
-      outline: none;
-      border-color: rgba(59,130,246,.55);
-      box-shadow:
-        0 0 0 1px rgba(59,130,246,.45),
-        0 0 40px rgba(59,130,246,.18) inset;
-    }
-
-    .card-row{
-      display:flex;
-      gap:12px;
-      align-items:flex-start;
-    }
-
-    .icon{
-      width:40px; height:40px;
-      display:grid; place-items:center;
-      background: rgba(59,130,246,.10);
-      border:1px solid rgba(59,130,246,.25);
-      border-radius:12px;
-      font-size:20px;
-      flex:0 0 auto;
-      box-shadow: inset 0 0 20px rgba(59,130,246,.15);
-    }
-
-    .card-text h3{
-      margin:0 0 4px 0;
-      font-size:16px; font-weight:800;
-    }
-
-    .card-text p{
-      margin:0;
-      font-size:12.5px;
-      color:var(--muted);
-    }
-
-    .shine{
-      position:absolute; inset:-40% -20% auto auto;
-      width:220px; height:220px;
-      background: radial-gradient(closest-side, rgba(59,130,246,.35), transparent 70%);
-      transform: translate(25%, -25%);
-      filter: blur(18px);
-      opacity:.7;
-      pointer-events:none;
-    }
-
-    .footer{
-      padding:10px 12px 6px 12px;
-      text-align:center;
-      font-size:11px;
-      color:#7c8596;
-      border-top:1px dashed var(--stroke);
-      margin-top:8px;
-      line-height:1.6;
-    }
-
-    /* mobile */
-    @media (max-width: 720px){
-      .grid{
-        grid-template-columns: 1fr;
-      }
-      .card-btn{ min-height:86px; }
-    }
-
-    /* toast */
-    .toast{
-      position:fixed;
-      left:50%; bottom:18px;
-      transform:translateX(-50%) translateY(20px);
-      background: rgba(11,16,24,.95);
-      border:1px solid var(--stroke-2);
-      color:var(--text);
-      padding:10px 14px;
-      border-radius:12px;
-      font-size:13px;
-      opacity:0;
-      transition:.2s ease;
-      box-shadow: var(--glow);
-      z-index:9999;
-      pointer-events:none;
-      white-space:nowrap;
-    }
-    .toast.show{
-      opacity:1;
-      transform:translateX(-50%) translateY(0);
-    }
-  </style>
+@media (max-width: 720px){
+  .grid{grid-template-columns:1fr;}
+  .card-btn{min-height:86px;}
+  .subgrid{grid-template-columns:1fr;}
+}
+</style>
 </head>
 <body>
   <div class="app">
@@ -203,10 +169,8 @@
     </header>
 
     <main class="grid">
-      <!-- левый столбец -->
       <section class="col">
-        <button class="card-btn active" data-key="ludka">
-          <div class="shine"></div>
+        <a class="card-btn active" href="ludka.html">
           <div class="card-row">
             <div class="icon">🎰</div>
             <div class="card-text">
@@ -214,9 +178,9 @@
               <p>Мини-игры</p>
             </div>
           </div>
-        </button>
+        </a>
 
-        <button class="card-btn" data-key="rpg">
+        <a class="card-btn" href="rpg.html">
           <div class="card-row">
             <div class="icon">🗺️</div>
             <div class="card-text">
@@ -224,9 +188,9 @@
               <p>Прокачка, квесты, статистика</p>
             </div>
           </div>
-        </button>
+        </a>
 
-        <button class="card-btn" data-key="raffles">
+        <a class="card-btn" href="raffles.html">
           <div class="card-row">
             <div class="icon">🎁</div>
             <div class="card-text">
@@ -234,12 +198,11 @@
               <p>Анимация и тизер “Скоро”</p>
             </div>
           </div>
-        </button>
+        </a>
       </section>
 
-      <!-- правый столбец -->
       <section class="col">
-        <button class="card-btn" data-key="prices">
+        <a class="card-btn" href="prices.html">
           <div class="card-row">
             <div class="icon">🪙</div>
             <div class="card-text">
@@ -247,9 +210,9 @@
               <p>Прайс-листы, справочник, поиск</p>
             </div>
           </div>
-        </button>
+        </a>
 
-        <button class="card-btn" data-key="shop">
+        <a class="card-btn" href="shop.html">
           <div class="card-row">
             <div class="icon">🛒</div>
             <div class="card-text">
@@ -257,7 +220,7 @@
               <p>Товары, покупки, бонусы</p>
             </div>
           </div>
-        </button>
+        </a>
       </section>
     </main>
 
@@ -269,47 +232,53 @@
     </div>
   </div>
 
-  <div id="toast" class="toast">Скоро будет доступно 👀</div>
-
   <script>
-    // Заглушки: 클릭 -> показать тост
-    const toast = document.getElementById("toast");
-    let t;
+(function(){
+  function setThemeVarsFromTelegram(){
+    try{
+      const tg = window.Telegram && window.Telegram.WebApp;
+      if(!tg) return false;
+      tg.ready(); tg.expand();
+      const p = tg.themeParams || {};
+      // Telegram может дать цвета строками типа "#ffffff"
+      const bg = p.bg_color;
+      const text = p.text_color;
+      const hint = p.hint_color;
+      const secondary = p.secondary_bg_color;
+      if(bg) document.documentElement.style.setProperty("--bg", bg);
+      if(secondary) document.documentElement.style.setProperty("--panel", secondary);
+      if(text) document.documentElement.style.setProperty("--text", text);
+      if(hint) document.documentElement.style.setProperty("--muted", hint);
 
-    function showToast(text){
-      toast.textContent = text;
-      toast.classList.add("show");
-      clearTimeout(t);
-      t = setTimeout(()=> toast.classList.remove("show"), 1400);
-    }
-
-    document.querySelectorAll(".card-btn").forEach(btn=>{
-      btn.addEventListener("click", ()=>{
-        // активная подсветка
-        document.querySelectorAll(".card-btn").forEach(b=>b.classList.remove("active"));
-        btn.classList.add("active");
-
-        const key = btn.dataset.key;
-        const names = {
-          ludka: "Лудка",
-          prices: "Цены",
-          rpg: "RPG",
-          shop: "Магазин",
-          raffles: "Розыгрыши"
-        };
-        showToast(`${names[key]} — раздел в разработке`);
-      });
-    });
-
-    // Telegram WebApp (если открылось внутри тг)
-    try {
-      if (window.Telegram?.WebApp) {
-        Telegram.WebApp.ready();
-        Telegram.WebApp.expand();
-        Telegram.WebApp.setHeaderColor("#0a0d12");
-        Telegram.WebApp.setBackgroundColor("#0a0d12");
+      // Определяем светлая/тёмная
+      const cs = getComputedStyle(document.documentElement).getPropertyValue("--text").trim();
+      // простой хак: если текст темный -> считаем светлой темой
+      if(text){
+        const isLight = isColorDark(text); // темный текст => светлый фон
+        document.documentElement.setAttribute("data-theme", isLight ? "light" : "dark");
       }
-    } catch (e) {}
-  </script>
+      tg.setHeaderColor(bg || "#0a0d12");
+      tg.setBackgroundColor(bg || "#0a0d12");
+      return true;
+    }catch(e){ return false; }
+  }
+
+  function isColorDark(hex){
+    // true если цвет темный
+    if(!hex || hex[0] !== "#") return false;
+    const r = parseInt(hex.slice(1,3),16);
+    const g = parseInt(hex.slice(3,5),16);
+    const b = parseInt(hex.slice(5,7),16);
+    const luminance = (0.299*r + 0.587*g + 0.114*b)/255;
+    return luminance < 0.5;
+  }
+
+  // fallback на prefers-color-scheme
+  if(!setThemeVarsFromTelegram()){
+    const prefersLight = window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches;
+    document.documentElement.setAttribute("data-theme", prefersLight ? "light" : "dark");
+  }
+})();
+</script>
 </body>
 </html>
