--- a/raffles.html
+++ b/raffles.html
@@ -72,6 +72,18 @@ header{
   text-shadow:0 0 18px rgba(59,130,246,.25);
 }
 .title span{font-size:12px;color:var(--muted);}
+
+.balance-pill{
+  margin-left:auto;
+  display:flex;align-items:center;gap:8px;
+  padding:7px 10px;border-radius:999px;
+  font-weight:800;font-size:14px;
+  background: linear-gradient(180deg, var(--card) 0%, var(--card-2) 100%);
+  border:1px solid var(--stroke);
+  box-shadow: var(--shadow);
+}
+.balance-coin{filter: drop-shadow(0 0 6px rgba(59,130,246,.35));}
+
 .back{
   display:inline-flex;align-items:center;gap:8px;
   padding:8px 12px;border-radius:10px;
@@ -81,6 +93,7 @@ header{
   cursor:pointer;transition:.15s ease;
 }
 .back:hover{border-color:var(--stroke-2);transform:translateY(-1px);}
+
 .grid{
   display:grid;
   grid-template-columns: 1.15fr .85fr;
@@ -103,10 +116,6 @@ a.card-btn,button.card-btn{
   transform: translateY(-1px);
   border-color: var(--stroke-2);
   box-shadow: 0 0 0 1px rgba(59,130,246,.25), 0 12px 30px rgba(8,12,18,.55);
-}
-.card-btn.active{
-  border-color: rgba(59,130,246,.55);
-  box-shadow: 0 0 0 1px rgba(59,130,246,.45), 0 0 40px rgba(59,130,246,.18) inset;
 }
 .card-row{display:flex;gap:12px;align-items:flex-start;}
 .icon{
@@ -143,15 +152,6 @@ a.card-btn,button.card-btn{
   border-top:1px dashed var(--stroke);margin-top:8px;line-height:1.6;
 }
 
-.toast{
-  position:fixed;left:50%;bottom:18px;transform:translateX(-50%) translateY(20px);
-  background: rgba(11,16,24,.95);
-  border:1px solid var(--stroke-2);
-  color:var(--text);padding:10px 14px;border-radius:12px;font-size:13px;
-  opacity:0;transition:.2s ease;box-shadow: var(--shadow);z-index:9999;pointer-events:none;white-space:nowrap;
-}
-.toast.show{opacity:1;transform:translateX(-50%) translateY(0);}
-
 @media (max-width: 720px){
   .grid{grid-template-columns:1fr;}
   .card-btn{min-height:86px;}
@@ -162,13 +162,18 @@ a.card-btn,button.card-btn{
 <body>
   <div class="app">
     <header>
-      <a class="back" href="index.html">← Назад</a>
+      <a class="back" href="/">← Назад</a>
       <div class="title">
         <h1>Розыгрыши</h1>
         <span>Анимация и тизер “Скоро”</span>
       </div>
-      <div style="width:72px"></div>
+      <div class="balance-pill">
+        <span class="balance-coin">🪙</span>
+        <span id="balanceValue">0</span>
+      </div>
     </header>
+
+    
 
     <section class="section">
       <h2>Прототип</h2>
@@ -193,7 +198,6 @@ a.card-btn,button.card-btn{
       if(!tg) return false;
       tg.ready(); tg.expand();
       const p = tg.themeParams || {};
-      // Telegram может дать цвета строками типа "#ffffff"
       const bg = p.bg_color;
       const text = p.text_color;
       const hint = p.hint_color;
@@ -203,9 +207,6 @@ a.card-btn,button.card-btn{
       if(text) document.documentElement.style.setProperty("--text", text);
       if(hint) document.documentElement.style.setProperty("--muted", hint);
 
-      // Определяем светлая/тёмная
-      const cs = getComputedStyle(document.documentElement).getPropertyValue("--text").trim();
-      // простой хак: если текст темный -> считаем светлой темой
       if(text){
         const isLight = isColorDark(text); // темный текст => светлый фон
         document.documentElement.setAttribute("data-theme", isLight ? "light" : "dark");
@@ -217,7 +218,6 @@ a.card-btn,button.card-btn{
   }
 
   function isColorDark(hex){
-    // true если цвет темный
     if(!hex || hex[0] !== "#") return false;
     const r = parseInt(hex.slice(1,3),16);
     const g = parseInt(hex.slice(3,5),16);
@@ -226,12 +226,52 @@ a.card-btn,button.card-btn{
     return luminance < 0.5;
   }
 
-  // fallback на prefers-color-scheme
   if(!setThemeVarsFromTelegram()){
     const prefersLight = window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches;
     document.documentElement.setAttribute("data-theme", prefersLight ? "light" : "dark");
   }
 })();
 </script>
+  <script>
+const API_BASE = "https://firstgamble.ru:8080"; 
+// Примеры:
+// 1) если без nginx: https://firstclub.ru:8080
+// 2) если через nginx proxy: https://api.firstclub.ru
+
+function getTgUserId(){
+  try {
+    return window.Telegram?.WebApp?.initDataUnsafe?.user?.id || null;
+  } catch(e){ return null; }
+}
+
+async function loadBalance(){
+  const userId = getTgUserId();
+  const valEl = document.getElementById("balanceValue");
+  if(!valEl) return;
+
+  if(!userId){
+    const localBal = localStorage.getItem("balance_local") || "0";
+    valEl.textContent = localBal;
+    return;
+  }
+
+  try{
+    const res = await fetch(`${API_BASE}/api/balance?user_id=${userId}`);
+    const data = await res.json();
+    valEl.textContent = data.balance ?? 0;
+    localStorage.setItem("balance_local", valEl.textContent);
+  }catch(e){
+    const localBal = localStorage.getItem("balance_local") || "0";
+    valEl.textContent = localBal;
+  }
+}
+
+loadBalance();
+</script>
+  <script>
+    // если на странице магазина есть отдельный вывод баланса — обновим
+    const shopEl = document.getElementById("balanceValueShop");
+    if (shopEl) shopEl.textContent = document.getElementById("balanceValue")?.textContent ?? "0";
+  </script>
 </body>
 </html>
