--- a/ludka.html
+++ b/ludka.html
@@ -178,7 +178,7 @@ a.card-btn,button.card-btn{
     <section class="section">
       <h2>Прототип</h2>
       <div class="subgrid">
-        <div class="tile"><h4>🎲 Кости</h4><p>Без ставок. Просто бросай и смотри результат.</p></div>
+        <a class="tile tile-link" href="/dice"><h4>🎲 Кости</h4><p>Без ставок. Просто бросай и смотри результат.</p></a>
 <div class="tile"><h4>🃏 Блэкджек</h4><p>Прототип интерфейса игры 21.</p></div>
 <div class="tile"><h4>🎰 Слотики</h4><p>Визуальный слот с анимацией (позже).</p></div>
 <div class="tile"><h4>🏆 Рейтинг</h4><p>Таблица лидеров семьи/бота.</p></div>
