--- a/dice.html
+++ b/dice.html
@@ -280,7 +280,8 @@
     })();
 
     // ---------- баланс ----------
-    const API_BASE = "https://firstgamble.ru:8080";
+    const API_BASE = "https://api.firstgamble.ru";
+
 
     function getTgUserId(){
       try { return window.Telegram?.WebApp?.initDataUnsafe?.user?.id || null; }
