--- a/shop.html
+++ b/shop.html
@@ -243,7 +243,8 @@ a.card-btn,button.card-btn{
 })();
 </script>
   <script>
-const API_BASE = "https://firstgamble.ru:8080"; 
+const API_BASE = "https://api.firstgamble.ru";
+
 // Примеры:
 // 1) если без nginx: https://firstclub.ru:8080
 // 2) если через nginx proxy: https://api.firstclub.ru
