--- a/dice.html
+++ b/dice.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Кости — FirstClub</title>
+    <title>Кости — FirstClub</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     :root{
