--- a/index.html
+++ b/index.html
@@ -1,175 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FirstClub</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-  <style>
-    :root {
-      --bg:#0a0d12; --bg2:#0e1117; --panel:#0d1117;
-      --card:#111722; --card2:#0f1520;
-      --stroke:rgba(255,255,255,.06);
-      --blue:#3b82f6; --blue2:#1d4ed8;
-      --text:#e6edf3; --muted:#98a2b3;
-      --shadow:0 0 0 1px var(--stroke),0 8px 30px rgba(0,0,0,.6);
-      --radius:18px;
-    }
-    html[data-theme="light"] {
-      --bg:#f4f7fb; --bg2:#eef2f7; --panel:#ffffff;
-      --card:#ffffff; --card2:#f6f8fb;
-      --stroke:rgba(10,20,40,.08);
-      --blue:#2563eb; --blue2:#1d4ed8;
-      --text:#0b1220; --muted:#52607a;
-      --shadow:0 0 0 1px var(--stroke),0 10px 26px rgba(10,20,40,.08);
-    }
-
-    * { box-sizing: border-box; }
-
-    body {
-      margin:0;
-      font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      background:
-        radial-gradient(1000px 600px at 10% -10%, rgba(59,130,246,.28), transparent 60%),
-        radial-gradient(800px 500px at 110% 0%, rgba(29,78,216,.22), transparent 55%),
-        linear-gradient(180deg, var(--bg2) 0%, var(--bg) 100%);
-      min-height:100vh;
-      padding:16px;
-      color:var(--text);
-      display:flex;
-      justify-content:center;
-    }
-
-    .app {
-      width:min(1200px,100%);
-      border-radius:20px;
-      border:1px solid var(--stroke);
-      box-shadow:var(--shadow);
-      background:linear-gradient(180deg, rgba(255,255,255,.03), transparent);
-      padding:16px;
-    }
-
-    header {
-      text-align:center;
-      padding:6px 0 16px;
-    }
-    header h1 {
-      margin:0;
-      font-size:26px;
-      font-weight:900;
-      letter-spacing:0.5px;
-    }
-    header span {
-      font-size:13px;
-      color:var(--muted);
-    }
-
-    .grid {
-      margin-top:12px;
-      display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(300px,1fr));
-      gap:16px;
-    }
-
-    .card {
-      padding:18px;
-      border-radius:18px;
-      border:1px solid var(--stroke);
-      background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);
-      box-shadow:var(--shadow);
-      cursor:pointer;
-      transition:.18s ease;
-    }
-    .card:hover {
-      transform:translateY(-2px);
-      border-color:rgba(59,130,246,.35);
-    }
-
-    .card-title {
-      font-size:19px;
-      font-weight:800;
-      margin-bottom:6px;
-      display:flex;
-      align-items:center;
-      gap:8px;
-    }
-
-    .card-desc {
-      font-size:13px;
-      color:var(--muted);
-    }
-
-    footer {
-      text-align:center;
-      font-size:12px;
-      color:var(--muted);
-      margin-top:20px;
-    }
-
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FirstClub — FirstClub</title>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<style>
+:root{--bg:#0a0d12;--bg2:#0e1117;--panel:#0d1117;--card:#111722;--card2:#0f1520;--stroke:rgba(255,255,255,.06);--stroke2:rgba(100,160,255,.25);--blue:#3b82f6;--blue2:#1d4ed8;--text:#e6edf3;--muted:#98a2b3;--shadow:0 0 0 1px var(--stroke),0 8px 30px rgba(0,0,0,.6);}
+html[data-theme="light"]{--bg:#f4f7fb;--bg2:#eef2f7;--panel:#fff;--card:#fff;--card2:#f6f8fb;--stroke:rgba(10,20,40,.08);--stroke2:rgba(59,130,246,.35);--blue:#2563eb;--blue2:#1d4ed8;--text:#0b1220;--muted:#52607a;--shadow:0 0 0 1px var(--stroke),0 10px 26px rgba(10,20,40,.08);}
+*{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--text);
+background:radial-gradient(1000px 600px at 10% -10%,rgba(59,130,246,.28),transparent 60%),
+radial-gradient(800px 500px at 110% 0%,rgba(29,78,216,.22),transparent 55%),
+linear-gradient(180deg,var(--bg2) 0%,var(--bg) 100%);min-height:100vh;display:flex;justify-content:center;padding:16px;}
+.app{width:min(1000px,100%);border:1px solid var(--stroke);border-radius:20px;box-shadow:var(--shadow);padding:14px;
+background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,0));}
+header{display:flex;align-items:center;justify-content:space-between;padding:10px 12px 14px;gap:10px;}
+.title{display:flex;flex-direction:column;gap:2px;align-items:center;flex:1;}
+.title h1{margin:0;font-size:20px;font-weight:800;} .title span{font-size:12px;color:var(--muted);}
+.back{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:10px;background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);
+border:1px solid var(--stroke);color:var(--text);text-decoration:none;font-weight:700;font-size:14px;cursor:pointer;transition:.15s ease;}
+.back:hover{border-color:var(--stroke2);transform:translateY(-1px);}
+.balance-pill{display:flex;align-items:center;gap:8px;padding:7px 10px;border-radius:999px;font-weight:800;font-size:14px;
+background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);border:1px solid var(--stroke);box-shadow:var(--shadow);min-width:64px;justify-content:center;}
+.section{background:linear-gradient(180deg,var(--panel) 0%,color-mix(in oklab,var(--panel) 92%,transparent) 100%);border:1px solid var(--stroke);
+border-radius:16px;padding:14px;box-shadow:var(--shadow);margin-bottom:12px;}
+.grid{display:grid;grid-template-columns:1.2fr 1fr;gap:12px;}
+.cardbtn{display:flex;justify-content:space-between;align-items:center;padding:14px;border-radius:14px;border:1px solid var(--stroke);
+background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:pointer;transition:.15s ease;text-decoration:none;color:var(--text);}
+.cardbtn:hover{border-color:var(--stroke2);transform:translateY(-1px);} .cardbtn h3{margin:0;font-size:16px;font-weight:900;}
+.cardbtn p{margin:4px 0 0;font-size:12px;color:var(--muted);}
+@media (max-width:720px){.grid{grid-template-columns:1fr;}}
+</style>
 </head>
 <body>
-
 <div class="app">
+<header>
+<a class="back" href="/">← Назад</a>
+<div class="title">
+<h1>FirstClub</h1>
+<span>Выбери раздел</span>
+</div>
+<div class="balance-pill"><span>🪙</span><span id="balanceValue">0</span></div>
+</header>
 
-  <header>
-    <h1>FirstClub</h1>
-    <span>Выбери раздел</span>
-  </header>
-
-  <div class="grid">
-
-    <!-- 🎲 Лудка -->
-    <div class="card" onclick="location.href='/ludka'">
-      <div class="card-title">🎰 Лудка</div>
-      <div class="card-desc">Мини-игры</div>
+<section class="section grid">
+  <a class="cardbtn" href="/ludka">
+    <div>
+      <h3>🎰 Лудка</h3>
+      <p>Мини‑игры</p>
     </div>
+    <div>→</div>
+  </a>
 
-    <!-- 💰 Цены -->
-    <div class="card" onclick="location.href='/prices'">
-      <div class="card-title">💰 Цены</div>
-      <div class="card-desc">Прайс-листы, справочник, поиск</div>
+  <a class="cardbtn" href="/prices">
+    <div>
+      <h3>💰 Цены</h3>
+      <p>Прайс‑листы, справочник, поиск</p>
     </div>
+    <div>→</div>
+  </a>
 
-    <!-- 🎮 RPG -->
-    <div class="card" onclick="location.href='/rpg'">
-      <div class="card-title">📘 RPG</div>
-      <div class="card-desc">Прокачка, квесты, статистика</div>
+  <a class="cardbtn" href="/rpg">
+    <div>
+      <h3>🗺️ RPG</h3>
+      <p>Прокачка, квесты, статистика</p>
     </div>
+    <div>→</div>
+  </a>
 
-    <!-- 🛒 Магазин -->
-    <div class="card" onclick="location.href='/shop'">
-      <div class="card-title">🛒 Магазин</div>
-      <div class="card-desc">Покупки, бонусы</div>
+  <a class="cardbtn" href="/shop">
+    <div>
+      <h3>🛒 Магазин</h3>
+      <p>Товары, покупки, бонусы</p>
     </div>
+    <div>→</div>
+  </a>
 
-    <!-- 🎁 Розыгрыши -->
-    <div class="card" onclick="location.href='/draws'">
-      <div class="card-title">🎁 Розыгрыши</div>
-      <div class="card-desc">Скоро</div>
+  <a class="cardbtn" href="/raffles">
+    <div>
+      <h3>🎁 Розыгрыши</h3>
+      <p>Анимации и тизер «Скоро»</p>
     </div>
-
-
-    <!-- ⭐ ДОБАВЛЕНО: Блэкджек -->
-    <div class="card" onclick="location.href='/bj'">
-      <div class="card-title">🂡 Блэкджек</div>
-      <div class="card-desc">Игра 21 — победа даёт +1 очко</div>
-    </div>
-
-    <!-- 🎰 ДОБАВЛЕНО: Слоты -->
-    <div class="card" onclick="location.href='/slot'">
-      <div class="card-title">🎰 Слот-машина</div>
-      <div class="card-desc">3 в ряд — +1 очко</div>
-    </div>
-
-  </div>
-
-  <footer>
-    v0.2 тестовый билд • FirstClub
-  </footer>
+    <div>→</div>
+  </a>
+</section>
 
 </div>
 
+<script>
+function isColorDark(hex){ if(!hex||hex[0]!=="#") return false; const r=parseInt(hex.slice(1,3),16),g=parseInt(hex.slice(3,5),16),b=parseInt(hex.slice(5,7),16);
+return (0.299*r+0.587*g+0.114*b)/255<0.5;}
+function initTelegram(){ const tg=window.Telegram&&window.Telegram.WebApp; if(!tg) return null; tg.ready(); tg.expand();
+const p=tg.themeParams||{}; if(p.bg_color) document.documentElement.style.setProperty("--bg",p.bg_color); if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel",p.secondary_bg_color);
+if(p.text_color) document.documentElement.style.setProperty("--text",p.text_color); if(p.hint_color) document.documentElement.style.setProperty("--muted",p.hint_color);
+if(p.text_color) document.documentElement.setAttribute("data-theme", isColorDark(p.text_color) ? "light":"dark");
+tg.setHeaderColor(p.bg_color||"#0a0d12"); tg.setBackgroundColor(p.bg_color||"#0a0d12"); return tg; }
+const tg=initTelegram(); if(!tg){ const prefersLight=window.matchMedia&&window.matchMedia("(prefers-color-scheme: light)").matches; document.documentElement.setAttribute("data-theme", prefersLight?"light":"dark"); }
+function getUidFromUrl(){ try{const u=new URL(location.href); return u.searchParams.get("uid");}catch(e){return null;} }
+function getTgUserId(){ try{ return tg?.initDataUnsafe?.user?.id || getUidFromUrl(); }catch(e){ return getUidFromUrl(); } }
+const API_BASE="https://api.firstgamble.ru";
+async function loadBalance(){ const uid=getTgUserId(); const el=document.getElementById("balanceValue"); if(!el) return;
+if(!uid){ el.textContent=localStorage.getItem("balance_local")||"0"; return; }
+try{ const r=await fetch(API_BASE+"/api/balance?user_id="+uid); const d=await r.json(); el.textContent=d.balance??0; localStorage.setItem("balance_local", el.textContent); }
+catch(e){ el.textContent=localStorage.getItem("balance_local")||"0"; }
+}
+loadBalance();
+</script>
 </body>
 </html>
