--- a/ludka.html
+++ b/ludka.html
@@ -93,9 +93,9 @@
         <div class="subtitle">3 в ряд = +1 очко</div>
       </a>
 
-      <a class="card" href="#soon1">
+      <a class="card" href="/rating">
         <div class="title2">🏆 Рейтинг</div>
-        <div class="subtitle">Скоро</div>
+        <div class="subtitle">Таблица лидеров</div>
       </a>
 
     </div>
