--- a/raffles.html
+++ b/raffles.html
@@ -23,13 +23,14 @@ border:1px solid var(--stroke);color:var(--text);text-decoration:none;font-weigh
 .balance-pill{display:flex;align-items:center;gap:8px;padding:7px 10px;border-radius:999px;font-weight:800;font-size:14px;
 background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);border:1px solid var(--stroke);box-shadow:var(--shadow);min-width:64px;justify-content:center;}
 .section{background:linear-gradient(180deg,var(--panel) 0%,color-mix(in oklab,var(--panel) 92%,transparent) 100%);border:1px solid var(--stroke);
-border-radius:16px;padding:14px;box-shadow:var(--shadow);margin-bottom:12px;}
+border-radius:16px;padding:14px;box-shadow:var(--shadow);margin-bottom:12px;position:relative;overflow:hidden;}
 .grid{display:grid;grid-template-columns:1.2fr 1fr;gap:12px;}
 .cardbtn{display:flex;justify-content:space-between;align-items:center;padding:14px;border-radius:14px;border:1px solid var(--stroke);
 background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:pointer;transition:.15s ease;text-decoration:none;color:var(--text);}
 .cardbtn:hover{border-color:var(--stroke2);transform:translateY(-1px);} .cardbtn h3{margin:0;font-size:16px;font-weight:900;}
 .cardbtn p{margin:4px 0 0;font-size:12px;color:var(--muted);}
 @media (max-width:720px){.grid{grid-template-columns:1fr;}}
+@keyframes spin{from{transform:rotate(0deg);}to{transform:rotate(360deg);}}
 </style>
 </head>
 <body>
@@ -42,7 +43,20 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
 </div>
 <div class="balance-pill"><span>🪙</span><span id="balanceValue">0</span></div>
 </header>
-<section class='section'><p>Здесь будут розыгрыши и анимации.</p></section>
+<section class='section'>
+  <div style="position:absolute;inset:0;pointer-events:none;background:radial-gradient(600px 280px at 30% 0%,rgba(59,130,246,.18),transparent 60%),radial-gradient(520px 240px at 80% 20%,rgba(37,99,235,.14),transparent 60%);"></div>
+  <div style="display:flex;flex-direction:column;align-items:center;gap:16px;padding:40px 14px;text-align:center;position:relative;z-index:1;">
+    <div style="width:120px;height:120px;display:grid;place-items:center;position:relative;">
+      <div style="position:absolute;inset:0;border-radius:50%;border:3px solid rgba(59,130,246,.18);"></div>
+      <div style="position:absolute;inset:10px;border-radius:50%;border:3px solid transparent;border-top-color:var(--blue);border-right-color:var(--blue2);animation:spin 1.4s linear infinite;box-shadow:0 0 18px rgba(59,130,246,.45);"></div>
+      <div style="width:46px;height:46px;border-radius:50%;background:linear-gradient(180deg,var(--blue),var(--blue2));box-shadow:0 12px 24px rgba(0,0,0,.35);display:grid;place-items:center;font-weight:900;letter-spacing:.4px;">FC</div>
+    </div>
+    <div style="max-width:520px;display:flex;flex-direction:column;gap:6px;">
+      <div style="font-size:18px;font-weight:900;letter-spacing:.3px;">Подготовка розыгрыша</div>
+      <div style="font-size:13px;color:var(--muted);line-height:1.6;">Более подробная информация будет оперативно доноситься через Discord.</div>
+    </div>
+  </div>
+</section>
 </div>
 
 <script>
