--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@ background:linear-gradient(180deg,var(--card) 0%,var(--card2) 100%);cursor:point
     </div>
     <div>→</div>
   </a>
+    <a class="cardbtn" href="/cabinet">
+  <div>
+    <h3>👤 Личный кабинет</h3>
+    <p>Твой TG ID и билеты розыгрыша</p>
+  </div>
+  <div class="badge">→</div>
+    </a>
+
 </section>
 
 </div>
